# quasar

./: .gitignore  .gitlab-ci.yml  .hlint.yaml  LICENSE  README.md  cabal.project  default.nix  flake.nix  ghcid  ghcid-warnings  qrpc.cabal  quasar-network.cabal  quasar.cabal
.github/workflows/: build.yml
examples/: NetworkCounting.hs  Web.hs  quasar-examples.cabal  quasar-web-examples.cabal
exceptions-united/: exceptions-united.cabal
exceptions-united/src/Control/Exception/: Ex.hs  ExceptionOf.hs
exceptions-united/test/Control/Exception/: ExceptionOfSpec.hs
precise-side-effects/: precise-side-effects.cabal
precise-side-effects/src/Control/Concurrent/STM/: Class.hs
precise-side-effects/src/Control/Exception/: Ex.hs
precise-side-effects/src/Control/Monad/: Capability.hs  CatchC.hs
precise-side-effects/test/Control/Concurrent/STM/: ClassSpec.hs
precise-side-effects/test/Control/Exception/: ExSpec.hs
quasar/: LICENSE  quasar.cabal
quasar-mqtt/: quasar-mqtt.cabal
quasar-mqtt/src/Quasar/: Mqtt.hs
quasar-network/: README.md  looptests  quasar-network.cabal
quasar-network/src/Quasar/: Network.hs
quasar-network/src/Quasar/Network/: Channel.hs  Client.hs  Connection.hs  Exception.hs  Multiplexer.hs  Runtime.hs  Server.hs  SocketLocation.hs  TH.hs
quasar-network/src/Quasar/Network/Runtime/: Class.hs  Function.hs  Future.hs  Generic.hs  Observable.hs
quasar-network/src/Quasar/Network/TH/: Generator.hs  Spec.hs
quasar-network/test/Quasar/: NetworkSpec.hs
quasar-network/test/Quasar/Network/: GenericSpec.hs  InterfaceSpec.hs  MultiplexerSpec.hs  ObservableSpec.hs
quasar-network/test/Quasar/Network/Runtime/: FunctionSpec.hs  GenericSpec.hs  ObservableSpec.hs
quasar-timer/: quasar-timer.cabal
quasar-timer/src/Quasar/: Timer.hs
quasar-timer/src/Quasar/Timer/: PosixTimer.hsc  TimerFd.hs
quasar-web/: quasar-web.cabal
quasar-web-client/: default.nix  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
quasar-web-client/src/: index.ts  main.ts
quasar-web-client/src/components/: api.ts  core.ts
quasar-web-client/src/components/createNode/: element.ts  text.ts
quasar-web-client/src/components/modifyElement/: children.ts
quasar-web/examples/: Main.hs  quasar-web-examples.cabal
quasar-web/src/Quasar/: Web.hs
quasar-web/src/Quasar/Web/: Server.hs
quasar/src/: Quasar.hs
quasar/src/Quasar/: Async.hs  Disposer.hs  Exceptions.hs  Future.hs  Future.hs-boot  Logger.hs  MonadQuasar.hs  Observable.hs  Pool.hs  Prelude.hs  PreludeExtras.hs  PreludeSTM.hs  Resources.hs
quasar/src/Quasar/Async/: Fork.hs  STMHelper.hs
quasar/src/Quasar/Disposer/: Core.hs  Core.hs-boot  DisposableVar.hs  FutureDisposer.hs  NewDisposable.hs  Owned.hs  Rc.hs
quasar/src/Quasar/Exceptions/: ExceptionSink.hs
quasar/src/Quasar/MonadQuasar/: Misc.hs
quasar/src/Quasar/Observable/: AccumulatingObserver.hs  Async.hs  Cache.hs  Core.hs  Lift.hs  List.hs  Loading.hs  Map.hs  ObservableList.hs  ObservableMap.hs  ObservablePriority.hs  ObservableVar.hs  Set.hs  Share.hs  Subject.hs  Traversable.hs  V3.hs
quasar/src/Quasar/Observable/Internal/: ObserverRegistry.hs
quasar/src/Quasar/Resources/: Core.hs  DisposableTVar.hs  DisposableVar.hs  Disposer.hs  Disposer.hs-boot  Finalizer.hs  FutureDisposer.hs  Lock.hs  Rc.hs  RcVar.hs  TRcVar.hs  TSimpleDisposer.hs
quasar/src/Quasar/Utils/: CallbackRegistry.hs  Exceptions.hs  Fix.hs  HashMap.hs  Map.hs  ReaderLock.hs  ShortIO.hs  TOnce.hs
quasar/test/: Spec.hs
quasar/test/Quasar/: AsyncSpec.hs  AwaitableSpec.hs  DisposerSpec.hs  FutureSpec.hs  ObservableSpec.hs  ResourcesSpec.hs
quasar/test/Quasar/Observable/: BindSpec.hs  LiftSpec.hs  ListSpec.hs  ObservableHashMapSpec.hs  ObservablePrioritySpec.hs  ObservableVarSpec.hs
quasar/test/Quasar/Utils/: ReaderLockSpec.hs
src/: Quasar.hs
src/Data/: Observable.hs
src/Data/Observable/: Delta.hs  ObservableHashMap.hs  ObservablePriority.hs
src/Network/: Rpc.hs
src/Network/Rpc/: Connection.hs  Multiplexer.hs  SocketLocation.hs  Utils.hs
src/Quasar/: Async.hs  Awaitable.hs  Core.hs  Disposable.hs  Exceptions.hs  Future.hs  Logger.hs  Monad.hs  MonadQuasar.hs  Network.hs  Observable.hs  Prelude.hs  PreludeExtras.hs  PreludeSTM.hs  ResourceManager.hs  Resources.hs  Subscribable.hs  Timer.hs
src/Quasar/Async/: Fork.hs  STMHelper.hs  Unmanaged.hs  V2.hs
src/Quasar/Exceptions/: ExceptionChannel.hs  ExceptionSink.hs
src/Quasar/MonadQuasar/: Misc.hs
src/Quasar/Network/: Connection.hs  Multiplexer.hs  Runtime.hs  SocketLocation.hs  TH.hs
src/Quasar/Network/Runtime/: Observable.hs
src/Quasar/Network/TH/: Generator.hs  Spec.hs
src/Quasar/Observable/: Delta.hs  ObservableHashMap.hs  ObservablePriority.hs
src/Quasar/Old/: Async.hs  UnmanagedAsync.hs
src/Quasar/Resources/: Disposer.hs
src/Quasar/Timer/: PosixTimer.hsc  TimerFd.hs
src/Quasar/Utils/: Concurrent.hs  Exceptions.hs  ExtraT.hs  ReaderLock.hs  ShortIO.hs  TOnce.hs
src/lib/Qd/: Observable.hs
src/lib/Qd/Observable/: Delta.hs  ObservableHashMap.hs  ObservableMap.hs  ObservablePriority.hs
stm-ltd/: stm-ltd.cabal
stm-ltd/src/Control/Concurrent/STM/: Class.hs
stm-ltd/src/Control/Concurrent/STM/Class/: TH.hs
stm-ltd/src/Control/Monad/: Capability.hs  Limited.hs
test/Data/: ObservableSpec.hs
test/Data/Observable/: ObservableHashMapSpec.hs  ObservablePrioritySpec.hs
test/Network/: RpcSpec.hs
test/Network/Rpc/: MultiplexerSpec.hs
test/Network/RpcSpec/: ExampleApi.hs
test/Qd/: ObservableSpec.hs
test/Qd/Observable/: ObservableHashMapSpec.hs  ObservablePrioritySpec.hs
test/Quasar/: AsyncSpec.hs  AwaitableSpec.hs  DisposableSpec.hs  NetworkSpec.hs  ObservableSpec.hs  ResourceManagerSpec.hs  ResourcesSpec.hs  SubscribableSpec.hs
test/Quasar/Network/: InterfaceSpec.hs  MultiplexerSpec.hs  ObservableSpec.hs
test/Quasar/Observable/: ObservableHashMapSpec.hs  ObservablePrioritySpec.hs
