cabal-version: 3.0

name:           quasar
version:        0.1.0.0
license:        NONE
build-type:     Simple
extra-source-files:
    README.md

--source-repository head
--  type: git
--  location: https://git.c3pb.de/jens/quasar.git

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-safe-haskell-mode
    -Wno-missing-import-lists
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-methods

common shared-executable-properties
  import: shared-properties
  ghc-options:
    -threaded
    -rtsopts "-with-rtsopts=-N -I0"

library
  import: shared-properties
  build-depends:
    base >=4.7 && <5,
    binary,
    containers,
    exceptions,
    ghc-prim,
    hashable,
    microlens-platform,
    mtl,
    record-hasfield,
    stm,
    template-haskell,
    transformers,
    unordered-containers,
  exposed-modules:
    Quasar.Async
    Quasar.Awaitable
    Quasar.Disposable
    Quasar.Observable
    Quasar.Observable.Delta
    Quasar.Observable.ObservableHashMap
    Quasar.Observable.ObservablePriority
    Quasar.Prelude
    Quasar.PreludeExtras
    Quasar.Utils.ExtraT
  hs-source-dirs:
    src

test-suite quasar-test
  import: shared-executable-properties
  type: exitcode-stdio-1.0
  build-depends:
    base >=4.7 && <5,
    hspec,
    quasar,
    unordered-containers,
  main-is: Spec.hs
  other-modules:
    Quasar.AsyncSpec
    Quasar.AwaitableSpec
    Quasar.DisposableSpec
    Quasar.ObservableSpec
    Quasar.Observable.ObservableHashMapSpec
    Quasar.Observable.ObservablePrioritySpec
  hs-source-dirs:
    test
