cabal-version: 3.0

name:           exceptions-united
version:        0.1.0.0
license:        BSD-2-Clause
build-type:     Simple

source-repository head
 type: git
 location: https://github.com/queezle42/quasar

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    BlockArguments
    ConstraintKinds
    DataKinds
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonoLocalBinds
    NoImplicitPrelude
    NoStarIsType
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-import-lists
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods

library
  import: shared-properties
  build-depends:
    base,
    exceptions,
  exposed-modules:
    Control.Exception.Ex
  other-modules:
  hs-source-dirs:
    src

test-suite exceptions-united-test
  import: shared-properties
  type: exitcode-stdio-1.0
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"
  build-depends:
    base,
    exceptions-united,
    hspec,
  main-is: Spec.hs
  other-modules:
    Control.Exception.ExSpec
  hs-source-dirs:
    test
