cabal-version: 3.0

name:           precise-side-effects
version:        0.1.0.0
license:        BSD-2-Clause
build-type:     Simple

synopsis:
  stm drop-in replacement with MonadSTM and optional tagged capabilities

source-repository head
 type: git
 location: https://github.com/queezle42/quasar

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BlockArguments
    ConstraintKinds
    DataKinds
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonoLocalBinds
    NoImplicitPrelude
    NoStarIsType
    PolyKinds
    QuantifiedConstraints
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-import-lists
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods

library
  import: shared-properties
  build-depends:
    array,
    base,
    exceptions,
    stm,
    template-haskell,
    transformers,
  exposed-modules:
    Control.Concurrent.STM.Class
    Control.Exception.Ex
  other-modules:
    Control.Concurrent.STM.Class.TH
  hs-source-dirs:
    src

test-suite precise-side-effects-test
  import: shared-properties
  type: exitcode-stdio-1.0
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"
  build-depends:
    base,
    hspec,
    precise-side-effects,
    transformers,
  main-is: Spec.hs
  other-modules:
    Control.Concurrent.STM.ClassSpec
    Control.Exception.ExSpec
  hs-source-dirs:
    test
