cabal-version: 3.0

name: quasar-network
version: 0.1.0.0
category: Protocol, Network, Networking, Network API
description: RPC library with support for pipelining, reverse calls and data streams.
author: Jens Nolte
maintainer: Jens Nolte
copyright: 2021 Jens Nolte
license: BSD-2-Clause
build-type: Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/queezle42/quasar

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    MagicHash
    NoImplicitPrelude
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    TemplateHaskellQuotes
    TypeFamilies
    ViewPatterns
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods

library
  import: shared-properties
  exposed-modules:
    Quasar.Network
    Quasar.Network.Channel
    Quasar.Network.Client
    Quasar.Network.Connection
    Quasar.Network.Exception
    Quasar.Network.Multiplexer
    Quasar.Network.Runtime
    Quasar.Network.Server
    Quasar.Network.SocketLocation
  other-modules:
    Quasar.Network.Runtime.Class
    Quasar.Network.Runtime.Function
    Quasar.Network.Runtime.Future
    Quasar.Network.Runtime.Generic
    Quasar.Network.Runtime.Observable
  build-depends:
    base >=4.7 && <5,
    async,
    binary,
    bytestring,
    containers,
    exceptions,
    mtl,
    network,
    quasar,
    template-haskell,
    unix,
    unordered-containers,
  hs-source-dirs:
    src

test-suite quasar-network-test
  import: shared-properties
  type: exitcode-stdio-1.0
  ghc-options:
    -threaded
    -rtsopts "-with-rtsopts=-N"
  build-depends:
    base >=4.7 && <5,
    QuickCheck,
    async,
    binary,
    bytestring,
    exceptions,
    hspec,
    hspec-core,
    hspec-expectations-lifted,
    mtl,
    quasar,
    quasar-network,
    stm,
  main-is: Spec.hs
  other-modules:
    Quasar.Network.GenericSpec
    Quasar.Network.MultiplexerSpec
    Quasar.Network.ObservableSpec
    Quasar.NetworkSpec
  hs-source-dirs:
    test
