cabal-version: 3.0

name:           quasar
version:        0.1.0.0
license:        BSD-2-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/queezle42/quasar

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DisambiguateRecordFields
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    LexicalNegation
    MagicHash
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-safe-haskell-mode
    -Wno-missing-kind-signatures
    -Wno-missing-import-lists
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods

common shared-executable-properties
  import: shared-properties
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -I0"

library
  import: shared-properties
  build-depends:
    base >=4.7 && <5,
    containers,
    exceptions,
    ghc-prim,
    hashable,
    mtl,
    precise-side-effects,
    transformers,
    transformers-base,
    unordered-containers,
  exposed-modules:
    Quasar
    Quasar.Async
    Quasar.Async.Fork
    Quasar.Exceptions
    Quasar.Exceptions.ExceptionSink
    Quasar.Future
    Quasar.Logger
    Quasar.MonadQuasar
    Quasar.MonadQuasar.Misc
    Quasar.Observable
    Quasar.Observable.Delta
    Quasar.Observable.ObservableHashMap
    Quasar.Observable.ObservableMap
    Quasar.Observable.ObservablePriority
    Quasar.Prelude
    Quasar.PreludeExtras
    Quasar.Resources
    Quasar.Utils.CallbackRegistry
    Quasar.Utils.Exceptions
    Quasar.Utils.ExtraT
    Quasar.Utils.Fix
    Quasar.Utils.HashMap
    Quasar.Utils.Map
    Quasar.Utils.ReaderLock
    Quasar.Utils.TOnce
  other-modules:
    Quasar.Resources.Core
    Quasar.Resources.Disposer
    Quasar.Resources.TSimpleDisposer
    Quasar.Utils.ShortIO
  hs-source-dirs:
    src

test-suite quasar-test
  import: shared-executable-properties
  type: exitcode-stdio-1.0
  build-depends:
    base >=4.7 && <5,
    exceptions,
    hspec,
    quasar,
    stm,
  main-is: Spec.hs
  other-modules:
    Quasar.AsyncSpec
    Quasar.FutureSpec
    Quasar.Observable.ObservableHashMapSpec
    Quasar.Observable.ObservablePrioritySpec
    Quasar.ObservableSpec
    Quasar.ResourcesSpec
    Quasar.Utils.ReaderLockSpec
  hs-source-dirs:
    test
