cabal-version: 3.0

name:           quasar
version:        0.1.0.0
license:        BSD-2-Clause
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/queezle42/quasar

common shared-properties
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BangPatterns
    BlockArguments
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    MagicHash
    NoImplicitPrelude
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    TemplateHaskellQuotes
    TypeFamilies
    ViewPatterns
  default-language: GHC2021
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Werror=incomplete-patterns
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods

library
  import: shared-properties
  build-depends:
    base <5,
    binary,
    containers,
    exceptions,
    fingertree,
    ghc-prim,
    hashable,
    mtl,
    precise-side-effects,
    unordered-containers,
  exposed-modules:
    Quasar
    Quasar.Async
    Quasar.Async.Fork
    Quasar.Exceptions
    Quasar.Exceptions.ExceptionSink
    Quasar.Future
    Quasar.Logger
    Quasar.MonadQuasar
    Quasar.MonadQuasar.Misc
    Quasar.Observable
    Quasar.Observable.AccumulatingObserver
    Quasar.Observable.Async
    Quasar.Observable.Cache
    Quasar.Observable.Core
    Quasar.Observable.Lift
    Quasar.Observable.List
    Quasar.Observable.Loading
    Quasar.Observable.Map
    Quasar.Observable.ObservableList
    Quasar.Observable.ObservableMap
    Quasar.Observable.ObservablePriority
    Quasar.Observable.ObservableVar
    Quasar.Observable.Set
    Quasar.Observable.Subject
    Quasar.Observable.Traversable
    Quasar.Prelude
    Quasar.PreludeExtras
    Quasar.Resources
    Quasar.Resources.DisposableVar
    Quasar.Resources.TRcVar
    Quasar.Utils.CallbackRegistry
    Quasar.Utils.Exceptions
    Quasar.Utils.ExtraT
    Quasar.Utils.Fix
    Quasar.Utils.HashMap
    Quasar.Utils.Map
    Quasar.Utils.ReaderLock
    Quasar.Utils.TOnce
  other-modules:
    Quasar.Resources.Disposer
  hs-source-dirs:
    src

test-suite quasar-test
  import: shared-properties
  type: exitcode-stdio-1.0
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"
  build-depends:
    base >=4.7 && <5,
    containers,
    exceptions,
    fingertree,
    hspec,
    quasar,
    text,
  main-is: Spec.hs
  other-modules:
    Quasar.AsyncSpec
    Quasar.FutureSpec
    Quasar.Observable.BindSpec
    Quasar.Observable.LiftSpec
    Quasar.Observable.ListSpec
    Quasar.Observable.ObservableHashMapSpec
    Quasar.Observable.ObservablePrioritySpec
    Quasar.Observable.ObservableVarSpec
    Quasar.ObservableSpec
    Quasar.ResourcesSpec
    Quasar.Utils.ReaderLockSpec
  hs-source-dirs:
    test
